# starblox

./: Cargo.toml  justfile  rustfmt.toml
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/starblox/: Cargo.toml
crates/starblox/src/: main.rs
crates/tui/: Cargo.toml
