[package]
name = "starblox-core"
version = "0.0.0"
edition = "2024"

[dependencies]
async-imap = { version = "0.10.4", default-features = false, features = ["runtime-tokio"] }
rustls = "0.23.28"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-rustls = "0.26.2"
webpki-roots = "1.0.1"
