[package]
name = "starblox"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository  = "https://github.com/dpjungmin/starblox"
description = "TUI e‑mail client"

[dependencies]
anyhow.workspace = true
crossterm = "0.29.0"
ratatui = "0.29.0"
starblox-core = { path = "../core" }
tokio = { version = "1.46.1", features = ["full"] }
